# guild-simulator-archive

./: Cargo.toml
.github/workflows/: ci.yaml
assets/locales/: en.yml
src/: custom_components.rs  enums.rs  main.rs  my_assets.rs  utils.rs
src/content/: maps.rs  missions.rs  mod.rs  recruits.rs
src/content/equipments/: armors.rs  scrolls.rs
src/structs/: general_structs.rs  maps.rs  missions.rs  mod.rs  player_stats.rs  recruits.rs
src/systems/updates/: close_tuto_message.rs  init_rooms.rs  skip_tuto.rs  update_room_on_click.rs
src/systems/updates/barrack/: desequip_selected_recruit.rs  mod.rs  select_item_in_inventory.rs
src/systems/updates/command_room/: close_mission_modal.rs  select_map.rs  select_mission_button.rs  select_recruit_for_mission_button.rs
src/systems/updates/hud/: open_tuto_message.rs  sleep_button_system.rs  update_day_counter.rs  update_gold_counter.rs  update_guild_level.rs  update_recruit_counter.rs  update_reputation_counter.rs  update_sleep_button_texture.rs  update_toxicity_counter.rs
src/systems/updates/office/: sign_mission_report.rs  toggle_daily_event_documents.rs  update_daily_event_documents.rs
src/ui/hud_folder/: hud.rs  left_hud.rs  mayor_notification_toast.rs  right_hud.rs  sleep_button.rs
src/ui/modals/daily_events/: daily_events_modal.rs  discussion_event_doc.rs  spontaneous_application_event_doc.rs
src/ui/modals/mission_order_modal_folder/: mission_order_modal.rs  mission_recap.rs
src/ui/modals/mission_report_modal_folder/: mission_ennemy_picture.rs  mission_report_modal.rs  (+1 more)
src/ui/rooms/: room_store.rs
(+17 files in other folders)
