[package]
name = "guild_simulator"
version = "0.0.4"
edition = "2021"
authors = ["Guillaume Jolibois <jolibois.contact@gmail.com>"]
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
bevy = "0.15"
# bevy-inspector-egui = "0.28.0"
uuid = "1.11.0"
rand = "0.8.4"
serde = { version = "1.0.215", features = ["derive"] }
pyri_tooltip = "0.2.0"
colored = "2.2.0"
rust-i18n = "3.1.2"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"

[profile.dist]
inherits = "release"
opt-level = 0
lto = true
codegen-units = 1
strip = true

[build-dependencies]
embed-resource = "3.0.1"

[target.x86_64h-apple-darwin]

[profile.release-native]
inherits = "release"
opt-level = 0
strip = "none"
